--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Train Time</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase.js"></script>
@@ -20,20 +20,7 @@
 
 
    
-    <style>
-        body{
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            color:#2c1a06;
-            
-            background-image: url(/Users/amous/bootcamp/homework/Train-Time/assets/images/5x7ft-train-track-photo-backdrops-vinyl-mist.jpg);
-        }
-        #train-table th,
-        td {
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            display: inline-block;
-            width: 16.575%;
-        }
-    </style>
+  
 </head>
 
 <body>
